Isaacsim simulation node added

--- a/examples/joystick_control.ipynb
+++ b/examples/joystick_control.ipynb
@@ -35,24 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'q': array([-4.66836149e-05, -7.85045044e-01,  6.62306962e-05, -2.35659225e+00,\n",
-       "         6.83355540e-05,  1.57074000e+00,  7.85491554e-01,  0.00000000e+00,\n",
+       "{'q': array([-3.26072226e-04, -7.84897694e-01, -3.54046940e-04, -2.35627899e+00,\n",
+       "        -3.85718082e-04,  1.56990105e+00,  7.85117351e-01,  0.00000000e+00,\n",
        "         0.00000000e+00]),\n",
-       " 'dq': array([ 9.98833452e-04, -1.74796479e-03,  4.14957034e-04,  8.28514799e-05,\n",
-       "         1.53946317e-03, -1.86469280e-05,  4.01700470e-04,  0.00000000e+00,\n",
-       "         0.00000000e+00]),\n",
-       " 'T': array([ 1.18846558e-01, -4.55847836e+00, -6.82967067e-01,  2.33390026e+01,\n",
-       "         8.24326515e-01,  2.38965559e+00,  9.06659663e-03,  0.00000000e+00,\n",
-       "         0.00000000e+00])}"
+       " 'dq': array([ 0.00065008, -0.00058677, -0.00026289,  0.00161526, -0.00014949,\n",
+       "        -0.00067228,  0.00076771,  0.        ,  0.        ]),\n",
+       " 'T': array([ 0.41588092, -4.55825138, -0.30787149, 22.84637642,  1.03245449,\n",
+       "         2.63653326,  0.10467696,  0.        ,  0.        ])}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +95,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 47\u001b[0m\n\u001b[1;32m     42\u001b[0m     omega_hat \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[ \u001b[39m0\u001b[39m,       \u001b[39m-\u001b[39mcmd[\u001b[39m2\u001b[39m],  cmd[\u001b[39m1\u001b[39m]],\n\u001b[1;32m     43\u001b[0m                           [ cmd[\u001b[39m2\u001b[39m],   \u001b[39m0\u001b[39m,      \u001b[39m-\u001b[39mcmd[\u001b[39m0\u001b[39m]],\n\u001b[1;32m     44\u001b[0m                           [\u001b[39m-\u001b[39mcmd[\u001b[39m1\u001b[39m],   cmd[\u001b[39m0\u001b[39m],      \u001b[39m0\u001b[39m]])\n\u001b[1;32m     45\u001b[0m     R0 \u001b[39m=\u001b[39m R0\u001b[39m@\u001b[39m(np\u001b[39m.\u001b[39meye(\u001b[39m3\u001b[39m)\u001b[39m+\u001b[39momega_hat\u001b[39m/\u001b[39m\u001b[39m100\u001b[39m)\n\u001b[0;32m---> 47\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.01\u001b[39;49m)\n\u001b[1;32m     48\u001b[0m T\u001b[39m=\u001b[39m T0\u001b[39m@np\u001b[39m\u001b[39m.\u001b[39mvstack([np\u001b[39m.\u001b[39mhstack([R0, np\u001b[39m.\u001b[39marray([x0,y0,z0])\u001b[39m.\u001b[39mreshape(\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m)]), np\u001b[39m.\u001b[39marray([\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m])])\n\u001b[1;32m     49\u001b[0m state \u001b[39m=\u001b[39m robot\u001b[39m.\u001b[39mget_state()\n",
+      "\u001b[1;32m/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb Cell 6\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W5sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m     omega_hat \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[ \u001b[39m0\u001b[39m,       \u001b[39m-\u001b[39mcmd[\u001b[39m2\u001b[39m],  cmd[\u001b[39m1\u001b[39m]],\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W5sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m                           [ cmd[\u001b[39m2\u001b[39m],   \u001b[39m0\u001b[39m,      \u001b[39m-\u001b[39mcmd[\u001b[39m0\u001b[39m]],\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W5sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m                           [\u001b[39m-\u001b[39mcmd[\u001b[39m1\u001b[39m],   cmd[\u001b[39m0\u001b[39m],      \u001b[39m0\u001b[39m]])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W5sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m     R0 \u001b[39m=\u001b[39m R0\u001b[39m@\u001b[39m(np\u001b[39m.\u001b[39meye(\u001b[39m3\u001b[39m)\u001b[39m+\u001b[39momega_hat\u001b[39m/\u001b[39m\u001b[39m100\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W5sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.01\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W5sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m T\u001b[39m=\u001b[39m T0\u001b[39m@np\u001b[39m\u001b[39m.\u001b[39mvstack([np\u001b[39m.\u001b[39mhstack([R0, np\u001b[39m.\u001b[39marray([x0,y0,z0])\u001b[39m.\u001b[39mreshape(\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m)]), np\u001b[39m.\u001b[39marray([\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m])])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W5sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m state \u001b[39m=\u001b[39m robot\u001b[39m.\u001b[39mget_state()\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -215,6 +213,103 @@
       ]
      },
      "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "ef_poses = np.stack(ef_poses)\n",
+    "stamps = np.array(stamps)\n",
+    "dataset = {'stamp':stamps, 'base_T_ef':ef_poses}\n",
+    "with open('ef_poses.pckl', 'wb') as f:\n",
+    "    pickle.dump(dataset,f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'stamp': array([1.69816514e+09, 1.69816514e+09, 1.69816514e+09, ...,\n",
+       "        1.69816529e+09, 1.69816529e+09, 1.69816529e+09]),\n",
+       " 'base_T_ef': array([[[ 9.99998862e-01, -2.92427289e-04, -1.48025340e-03,\n",
+       "           3.06768725e-01],\n",
+       "         [-2.92630686e-04, -9.99999948e-01, -1.37192000e-04,\n",
+       "          -2.97509097e-04],\n",
+       "         [-1.48021321e-03,  1.37625012e-04, -9.99998895e-01,\n",
+       "           4.86610338e-01],\n",
+       "         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "           1.00000000e+00]],\n",
+       " \n",
+       "        [[ 9.99998858e-01, -2.84108759e-04, -1.48461798e-03,\n",
+       "           3.06768273e-01],\n",
+       "         [-2.84308954e-04, -9.99999951e-01, -1.34636483e-04,\n",
+       "          -2.96123958e-04],\n",
+       "         [-1.48457966e-03,  1.35058420e-04, -9.99998889e-01,\n",
+       "           4.86607777e-01],\n",
+       "         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "           1.00000000e+00]],\n",
+       " \n",
+       "        [[ 9.99998855e-01, -2.81865608e-04, -1.48676296e-03,\n",
+       "           3.06767394e-01],\n",
+       "         [-2.82061366e-04, -9.99999952e-01, -1.31459480e-04,\n",
+       "          -2.94022201e-04],\n",
+       "         [-1.48672583e-03,  1.31878688e-04, -9.99998886e-01,\n",
+       "           4.86606631e-01],\n",
+       "         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "           1.00000000e+00]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[ 9.21869406e-01,  2.50304464e-01,  2.95811552e-01,\n",
+       "           4.00147322e-01],\n",
+       "         [ 2.12628549e-01, -9.64943446e-01,  1.53861123e-01,\n",
+       "           1.24691100e-01],\n",
+       "         [ 3.23953544e-01, -7.89418812e-02, -9.42773717e-01,\n",
+       "           5.70620186e-01],\n",
+       "         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "           1.00000000e+00]],\n",
+       " \n",
+       "        [[ 9.21864905e-01,  2.50314623e-01,  2.95816981e-01,\n",
+       "           4.00146074e-01],\n",
+       "         [ 2.12637652e-01, -9.64940951e-01,  1.53864195e-01,\n",
+       "           1.24692724e-01],\n",
+       "         [ 3.23960377e-01, -7.89401736e-02, -9.42771512e-01,\n",
+       "           5.70621734e-01],\n",
+       "         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "           1.00000000e+00]],\n",
+       " \n",
+       "        [[ 9.21867221e-01,  2.50308686e-01,  2.95814789e-01,\n",
+       "           4.00146662e-01],\n",
+       "         [ 2.12633247e-01, -9.64942672e-01,  1.53859487e-01,\n",
+       "           1.24689845e-01],\n",
+       "         [ 3.23956679e-01, -7.89379589e-02, -9.42772968e-01,\n",
+       "           5.70621864e-01],\n",
+       "         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "           1.00000000e+00]]])}"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
