--- a/examples/nerf_data_collector.ipynb
+++ b/examples/nerf_data_collector.ipynb
@@ -72,12 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('dataset/sep26/camera_params.pkl', 'wb') as f:\n",
+    "with open('camera_params.pkl', 'wb') as f:\n",
     "    pickle.dump({'ext_params':ext_params, 'int_params':int_params}, f)"
    ]
   },
