--- a/examples/isaacsim_simple_example.ipynb
+++ b/examples/isaacsim_simple_example.ipynb
@@ -19,7 +19,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcm_bridge = LCMBridgeClient(robot_name='fr3')"
+    "import yaml\n",
+    "\n",
+    "def load_config(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        config = yaml.safe_load(file)\n",
+    "    return config"
    ]
   },
   {
@@ -28,14 +33,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "rgb_data_pipe = NumpyMemMapDataPipe(\n",
-    "    \"rgb\", force=False, dtype=\"uint8\", shape=(480, 640, 4)\n",
-    ")\n",
-    "\n",
-    "depth_data_pipe = NumpyMemMapDataPipe(\n",
-    "    \"depth\", force=False, dtype=\"float32\", shape=(480, 640)\n",
-    ")"
+    "cfg = load_config(\"/home/mocap/manipulation/rooholla/FR3Py/FR3Py/sim/isaac/sim_config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "camera_pipes = []\n",
+    "for camera in cfg['cameras']:\n",
+    "    if camera['type'] == 'rgb':\n",
+    "        shape = (camera['resolution'][1], camera['resolution'][0], 4)\n",
+    "    else:\n",
+    "        shape = (camera['resolution'][1], camera['resolution'][0])\n",
+    "    camera_pipes.append(NumpyMemMapDataPipe(camera['name']+'_'+camera['type'], force = False, shape= shape))\n",
+    "    print(camera['name']+'_'+camera['type'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lcm_bridge = LCMBridgeClient(robot_name='fr3')"
    ]
   },
   {
@@ -49,11 +72,11 @@
     "\n",
     "while True:\n",
     "    state = lcm_bridge.getStates(timeout=0.1)\n",
-    "    cmd.cmd =  9*[0.1]\n",
+    "    cmd.cmd =  9*[np.random.randn(1)*1]\n",
     "    lcm_bridge.sendCommands(cmd)\n",
-    "    img =  rgb_data_pipe.read()\n",
-    "    depth_map = depth_data_pipe.read()\n",
-    "    cv2.imshow('rgb', img)\n",
+    "    imgs =  [pipe.read() for pipe in camera_pipes]\n",
+    "    for i, img in enumerate(imgs):\n",
+    "        cv2.imshow(f'{i}', img)\n",
     "    cv2.waitKey(1)"
    ]
   },
