--- a/examples/pointcloud_alignment_example.ipynb
+++ b/examples/pointcloud_alignment_example.ipynb
@@ -6,27 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
     "import numpy as np\n",
-    "def depth2PointCloud(depth_map, fx, fy, cx, cy, min_depth=0.2, max_depth=3.0, depth_scale=1000.0):\n",
-    "    rows, cols = depth_map.shape\n",
-    "    # Apply the median filter to the depth image\n",
-    "    depth = cv2.medianBlur(depth_map, ksize=3)\n",
-    "    depth = depth.astype(np.float32)/depth_scale\n",
-    "    # depth = np.clip(depth, min_depth, max_depth)\n",
-    "    # Remove the outliers\n",
-    "    idx = np.where(((depth.reshape(-1)<=min_depth)+(depth.reshape(-1)>=max_depth)))[0]\n",
-    "    \n",
-    "    # Create a mesh grid for the depth map\n",
-    "    mesh_x, mesh_y = np.meshgrid(np.arange(cols), np.arange(rows))\n",
-    "    np.where(depth_map > 3)\n",
-    "    f = (fx+fy)/2\n",
-    "    # Calculate 3D coordinates (X, Y, Z) from depth values\n",
-    "    x = (mesh_x - cx) * depth_map / f\n",
-    "    y = (mesh_y - cy) * depth_map / f\n",
-    "    z = depth_map\n",
-    "    point_cloud = np.stack((x, y, z), axis=-1).reshape(-1, 3)\n",
-    "    point_cloud = np.delete(point_cloud, idx, axis=0)\n",
-    "    return point_cloud"
+    "import open3d as o3d\n",
+    "import pickle\n",
+    "import time\n",
+    "\n",
+    "from FR3Py.vision.utils import depth2PointCloud"
    ]
   },
   {
@@ -35,7 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
     "with open('dataset/sep26/camera_params.pkl', 'rb') as f:\n",
     "    params = pickle.load(f)\n",
     "\n",
@@ -50,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
+    "\n",
     "depth1 = cv2.imread('dataset/sep26/seq1/depth/1695784268680308480.png', -1)\n",
     "depth2 = cv2.imread('dataset/sep26/seq1/depth/1695784281219218432.png', -1)\n",
     "\n",
@@ -96,7 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import open3d as o3d\n",
     "pcd1 = o3d.geometry.PointCloud()\n",
     "pcd1.points = o3d.utility.Vector3dVector(pc1[:,0:3])\n",
     "tag_pcd1 = o3d.geometry.PointCloud()\n",
@@ -166,8 +150,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
     "camera.grab_frames()\n",
     "depth = camera.depth_frame\n",
     "pc = depth2PointCloud(depth,fx, fy, cx, cy)\n",
@@ -189,10 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import time\n",
-    "\n",
     "camera.grab_frames()\n",
     "depth = camera.depth_frame\n",
     "pc = depth2PointCloud(depth,fx, fy, cx, cy)\n",
@@ -216,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -230,9 +208,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.16"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
