updated kinect example

--- a/examples/kinect_example.ipynb
+++ b/examples/kinect_example.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prerequisites\n",
+    "\n",
+    "Before running the following cells go to `/home/mocap/locomotion/state_estimation/ros1_ws` run\n",
+    "\n",
+    "```bash\n",
+    "source devel/setup.zsh\n",
+    "roslaunch kinect2_bridge kinect2_bridge.launch\n",
+    "```\n",
+    "\n",
+    "to make the `kinect2` node start publishing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,32 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: cannot load logging configuration file, logging is disabled\n"
-     ]
-    }
-   ],
-   "source": [
-    "kinect = Kinect()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd_o3d = o3d.geometry.PointCloud()\n",
-    "pcd_o3d.points = o3d.utility.Vector3dVector(kinect.points.T)\n",
-    "voxel_down_pcd = pcd_o3d.voxel_down_sample(voxel_size=0.01)\n",
-    "pcd, _ = voxel_down_pcd.remove_statistical_outlier(20, 1.0)\n",
-    "o3d.visualization.draw_geometries([pcd])"
+    "# if shows a timeout error try running it again\n",
+    "kinect = Kinect()"
    ]
   },
   {
@@ -62,6 +58,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pcd_o3d = o3d.geometry.PointCloud()\n",
+    "pcd_o3d.points = o3d.utility.Vector3dVector(kinect.points.T)\n",
+    "voxel_down_pcd = pcd_o3d.voxel_down_sample(voxel_size=0.01)\n",
+    "pcd, _ = voxel_down_pcd.remove_statistical_outlier(20, 1.0)\n",
+    "\n",
+    "# use the + & - keys to change the size of the points\n",
+    "o3d.visualization.draw_geometries([pcd])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# don't forget to run this!\n",
     "kinect.close()"
    ]
   }
