updated kinect example

--- a/examples/kinect_example.ipynb
+++ b/examples/kinect_example.ipynb
@@ -13,7 +13,7 @@
     "roslaunch kinect2_bridge kinect2_bridge.launch\n",
     "```\n",
     "\n",
-    "to make the `kinect2` node start publishing data"
+    "to make the `kinect2` node start publishing data. To visualize the data in `RViz` change the `Fixed Frame` to `kinect2_rgb_optical_frame` and add the topic `/kinect2/qhd/points`."
    ]
   },
   {
