interface API unified

--- a/examples/joystick_control.ipynb
+++ b/examples/joystick_control.ipynb
@@ -14,16 +14,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Interface Running...\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'FR3' from 'FR3Py' (/home/mocap/Documents/FR3Py/FR3Py/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFR3Py\u001b[39;00m \u001b[39mimport\u001b[39;00m FR3\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/joystick_control.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m robot \u001b[39m=\u001b[39m FR3()\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'FR3' from 'FR3Py' (/home/mocap/Documents/FR3Py/FR3Py/__init__.py)"
      ]
     }
    ],
    "source": [
-    "from FR3Py.interfaces import FR3Real\n",
-    "robot = FR3Real()"
+    "from FR3Py import FR3\n",
+    "robot = FR3(robot_name = 'fr3', \n",
+    "            interface_type='joint_velocity')"
    ]
   },
   {
@@ -56,7 +61,7 @@
     }
    ],
    "source": [
-    "robot.get_state()"
+    "robot.getStates()"
    ]
   },
   {
