import reference bugs fixed

--- a/examples/jacobian_pseudo_inv_controller .ipynb
+++ b/examples/jacobian_pseudo_inv_controller .ipynb
@@ -19,9 +19,26 @@
       },
       {
          "cell_type": "code",
-         "execution_count": null,
+         "execution_count": 1,
          "metadata": {},
-         "outputs": [],
+         "outputs": [
+            {
+               "ename": "AttributeError",
+               "evalue": "'NoneType' object has no attribute '__dict__'",
+               "output_type": "error",
+               "traceback": [
+                  "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                  "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+                  "\u001b[1;32m/home/mocap/manipulation/rooholla/FR3Py/examples/jacobian_pseudo_inv_controller .ipynb Cell 3\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/jacobian_pseudo_inv_controller%20.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtime\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/jacobian_pseudo_inv_controller%20.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/jacobian_pseudo_inv_controller%20.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFR3Py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcontrollers\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mwaypoint_controller\u001b[39;00m \u001b[39mimport\u001b[39;00m WaypointController\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/jacobian_pseudo_inv_controller%20.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFR3Py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39menvs\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpybullet\u001b[39;00m \u001b[39mimport\u001b[39;00m FR3Sim\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/jacobian_pseudo_inv_controller%20.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m robot \u001b[39m=\u001b[39m FR3Sim(render_mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mhuman\u001b[39m\u001b[39m'\u001b[39m, mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mvelocity\u001b[39m\u001b[39m'\u001b[39m, Ts\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m1000\u001b[39m)\n",
+                  "File \u001b[0;32m~/.local/lib/python3.8/site-packages/FR3Py/__init__.py:9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlcm\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpinocchio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpin\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFR3Py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlcm_msgs\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfr3_commands\u001b[39;00m \u001b[39mimport\u001b[39;00m fr3_cmd\n\u001b[1;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFR3Py\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlcm_msgs\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfr3_states\u001b[39;00m \u001b[39mimport\u001b[39;00m fr3_state\n",
+                  "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/pinocchio/__init__.py:33\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mdeprecated\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     32\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mshortcuts\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m---> 33\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m visualize\n",
+                  "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/pinocchio/visualize/__init__.py:4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mbase_visualizer\u001b[39;00m \u001b[39mimport\u001b[39;00m BaseVisualizer\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mgepetto_visualizer\u001b[39;00m \u001b[39mimport\u001b[39;00m GepettoVisualizer\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mmeshcat_visualizer\u001b[39;00m \u001b[39mimport\u001b[39;00m MeshcatVisualizer\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mpanda3d_visualizer\u001b[39;00m \u001b[39mimport\u001b[39;00m Panda3dVisualizer\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mrviz_visualizer\u001b[39;00m \u001b[39mimport\u001b[39;00m RVizVisualizer\n",
+                  "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/pinocchio/visualize/meshcat_visualizer.py:11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 11\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mhppfcl\u001b[39;00m\n\u001b[1;32m     12\u001b[0m     WITH_HPP_FCL_BINDINGS \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m:\n",
+                  "File \u001b[0;32m~/.local/lib/python3.8/site-packages/cmeel.prefix/lib/python3.8/site-packages/hppfcl/__init__.py:35\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Software License Agreement (BSD License)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m#  Copyright (c) 2019 INRIA\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     33\u001b[0m \n\u001b[1;32m     34\u001b[0m \u001b[39m# ruff: noqa: F401, F403\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mhppfcl\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     36\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mhppfcl\u001b[39;00m \u001b[39mimport\u001b[39;00m __raw_version__, __version__\n",
+                  "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute '__dict__'"
+               ]
+            }
+         ],
          "source": [
             "import time\n",
             "import numpy as np\n",
@@ -167,7 +184,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.8.16"
+         "version": "3.8.15"
       }
    },
    "nbformat": 4,
