--- a/examples/robot_interface.ipynb
+++ b/examples/robot_interface.ipynb
@@ -35,7 +35,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 4,
+         "execution_count": 1,
          "metadata": {},
          "outputs": [
             {
@@ -62,9 +62,27 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 5,
+         "execution_count": 2,
          "metadata": {},
-         "outputs": [],
+         "outputs": [
+            {
+               "data": {
+                  "text/plain": [
+                     "{'q': array([ 3.19840116e-04, -7.84208998e-01, -2.34529158e-04, -2.35632430e+00,\n",
+                     "         4.17956734e-04,  1.57000401e+00,  7.85716726e-01,  0.00000000e+00,\n",
+                     "         0.00000000e+00]),\n",
+                     " 'dq': array([ 7.97927658e-04, -4.55017990e-04,  2.11986707e-04,  9.29398056e-04,\n",
+                     "         2.99767555e-04,  2.20032375e-05, -1.20979616e-04,  0.00000000e+00,\n",
+                     "         0.00000000e+00]),\n",
+                     " 'T': array([ 0.02708699, -5.1136713 , -0.40705362, 23.02490425,  0.56004238,\n",
+                     "         2.61639166, -0.13976884,  0.        ,  0.        ])}"
+                  ]
+               },
+               "execution_count": 2,
+               "metadata": {},
+               "output_type": "execute_result"
+            }
+         ],
          "source": [
             "robot.getStates()"
          ]
@@ -85,7 +103,7 @@
                "name": "stdout",
                "output_type": "stream",
                "text": [
-                  "State is None. check the connection\n"
+                  "starting the controller\n"
                ]
             }
          ],
@@ -96,33 +114,30 @@
             "\n",
             "controller = WaypointController(kp=1.5)\n",
             "# Read the initial state of the robot\n",
+            "time.sleep(0.2)\n",
             "state = robot.getStates()\n",
             "if state is not None:\n",
+            "    print('starting the controller')\n",
             "    q, dq = state['q'], state['dq']\n",
             "    p0 = controller.robot.getInfo(q,dq)['P_EE']\n",
             "    R0 = controller.robot.getInfo(q,dq)['R_EE']\n",
             "    T0 = np.vstack([np.hstack([R0, p0.reshape(3,1)]), np.array([0,0,0,1])])\n",
             "    \n",
             "    start_time = time.time()\n",
-            "    while True:\n",
+            "    while time.time()-start_time < 10:\n",
             "        time.sleep(0.01)\n",
             "        t = time.time() - start_time\n",
             "        x = 0.1 * np.sin(t)\n",
             "        T= T0 @ np.vstack([np.hstack([np.eye(3), np.array([0,0,x]).reshape(3,1)]), np.array([0,0,0,1])])\n",
-            "        state = robot.get_state()\n",
+            "        state = robot.getStates()\n",
             "        q, dq = state['q'], state['dq']\n",
             "        cmd = controller.compute(q, dq, T_cmd=T)\n",
-            "        robot.send_joint_command(cmd[0:7])\n",
+            "        robot.sendCommands(cmd)\n",
+            "\n",
+            "    robot.sendCommands(np.zeros(9))\n",
             "else:\n",
             "    print('State is None. check the connection')"
          ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "metadata": {},
-         "outputs": [],
-         "source": []
       }
    ],
    "metadata": {
@@ -141,7 +156,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.8.12"
+         "version": "3.9.16"
       }
    },
    "nbformat": 4,
