isaacsim bugs fixed and installation script added

--- a/examples/robot_interface_tutorial.ipynb
+++ b/examples/robot_interface_tutorial.ipynb
@@ -174,25 +174,15 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 8,
+         "execution_count": 9,
          "metadata": {},
          "outputs": [
             {
                "name": "stdout",
                "output_type": "stream",
                "text": [
-                  "starting the controller\n"
-               ]
-            },
-            {
-               "ename": "NameError",
-               "evalue": "name 'y0' is not defined",
-               "output_type": "error",
-               "traceback": [
-                  "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-                  "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-                  "\u001b[1;32m/home/mocap/manipulation/rooholla/FR3Py/examples/robot_interface.ipynb Cell 9\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/robot_interface.ipynb#X14sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m         cmd[i] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/robot_interface.ipynb#X14sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mif\u001b[39;00m digital[\u001b[39m0\u001b[39m]\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/robot_interface.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     y0 \u001b[39m=\u001b[39m y0 \u001b[39m-\u001b[39m cmd[\u001b[39m0\u001b[39m]\u001b[39m*\u001b[39m\u001b[39m0.2\u001b[39m\u001b[39m/\u001b[39m\u001b[39m100\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/robot_interface.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     x0 \u001b[39m=\u001b[39m x0 \u001b[39m-\u001b[39m cmd[\u001b[39m1\u001b[39m]\u001b[39m*\u001b[39m\u001b[39m0.2\u001b[39m\u001b[39m/\u001b[39m\u001b[39m100\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mocap/manipulation/rooholla/FR3Py/examples/robot_interface.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     z0 \u001b[39m=\u001b[39m z0 \u001b[39m+\u001b[39m cmd[\u001b[39m2\u001b[39m]\u001b[39m*\u001b[39m\u001b[39m0.2\u001b[39m\u001b[39m/\u001b[39m\u001b[39m100\u001b[39m\n",
-                  "\u001b[0;31mNameError\u001b[0m: name 'y0' is not defined"
+                  "starting the controller\n",
+                  "Demo ended.\n"
                ]
             }
          ],
@@ -250,13 +240,6 @@
             "else:\n",
             "    print('State is None. check the connection')"
          ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "metadata": {},
-         "outputs": [],
-         "source": []
       }
    ],
    "metadata": {
