isaacsim interface and example added.

--- a/examples/robot_interface_tutorial.ipynb
+++ b/examples/robot_interface_tutorial.ipynb
@@ -48,8 +48,8 @@
          ],
          "source": [
             "import sys \n",
-            "from FR3Py.robot.interface import FR3RobotInterface\n",
-            "robot = FR3RobotInterface()"
+            "from FR3Py.robot.interface import FR3Real\n",
+            "robot = FR3Real()"
          ]
       },
       {
