dataset collection script updated

--- a/examples/posed_image_dataset_collection_real.ipynb
+++ b/examples/posed_image_dataset_collection_real.ipynb
@@ -118,19 +118,12 @@
    "source": [
     "import time\n",
     "import numpy as np\n",
-    "from FR3Py.controllers.waypoint_controller import WaypointController\n",
+    "from FR3Py.controllers.jacobianPseudoInv import WaypointController\n",
     "import datetime\n",
     "import os\n",
     "import cv2\n",
-    "from FR3Py.trackers import ApriltagTracker\n",
     "import pandas as pd\n",
     "from scipy.spatial.transform import Rotation as R\n",
-    "tracker = ApriltagTracker(tag_size=0.172, \n",
-    "                          intrinsic_matrix=int_params['RGB']['K'], \n",
-    "                          distortion_coeffs=int_params['RGB']['D'])\n",
-    "\n",
-    "current_datetime = datetime.datetime.now()\n",
-    "formatted_datetime = current_datetime.strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "shutter_old = 0 \n",
     "\n",
     "def write_depth(depth, filename):\n",
@@ -189,7 +182,7 @@
     "    \n",
     "    camera.grab_frames()\n",
     "    cv2.imshow('color', camera.color_frame)\n",
-    "    cv2.waitKey(1)\n",
+    "    cv2.waitKey(10)\n",
     "    # Take a snapshot if required\n",
     "    shutter = digital[2]\n",
     "    if shutter==1 and shutter_old==0:\n",
@@ -205,7 +198,7 @@
     "        pose_dataset.append(np.hstack([stamp_ns, pos, q]))\n",
     "    else:\n",
     "        shutter_old = shutter\n",
-    "    # time.sleep(0.01)\n",
+    "\n",
     "    T= T0@np.vstack([np.hstack([R0, np.array([x0,y0,z0]).reshape(3,1)]), np.array([0,0,0,1])])\n",
     "    state = robot.getStates()\n",
     "    q, dq = state['q'], state['dq']\n",
